Restore notification shadow border on Win7 Aero

According to QA we still need notification border shadow on Win7 Aero.

TEST=manual
BUG=882826

Change-Id: Ia69a366188b595ff6e0c61c4b4f3c06a57c70580
Reviewed-on: https://chromium-review.googlesource.com/1233014
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593064}